force-app/main/default/objects/Org_Switcher_Mapping__mdt/Org_Switcher_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Org Switcher Mapping</label>
    <pluralLabel>Org Switcher Mappings</pluralLabel>
</CustomObject>