force-app/main/default/objects/Org_Switcher_Mapping__mdt/fields/AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordType__c</fullName>
    <description>Custom Metadata containing the account record type</description>
    <label>Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>