force-app/main/default/objects/Org_Switcher_Mapping__mdt/fields/IsACORole__c.field-meta.xml
<CustomField>
    <fullName>IsACORole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsACORole</label>
    <type>Checkbox</type>
</CustomField>