force-app/main/default/objects/Org_Switcher_Mapping__mdt/fields/isGPMSRole__c.field-meta.xml
<CustomField>
    <fullName>isGPMSRole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGPMSRole</label>
    <type>Checkbox</type>
</CustomField>