force-app/main/default/objects/Org_Switcher_Mapping__mdt/fields/isHideExtrernal__c.field-meta.xml
<CustomField>
    <fullName>isHideExtrernal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHideExtrernal</label>
    <type>Checkbox</type>
</CustomField>