force-app/main/default/objects/Org_Switcher_Mapping__mdt/fields/isProviderRole__c.field-meta.xml
<CustomField>
    <fullName>isProviderRole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProviderRole</label>
    <type>Checkbox</type>
</CustomField>