force-app/main/default/objects/Org_Switcher_Mapping__mdt/fields/isQFRRole__c.field-meta.xml
<CustomField>
    <fullName>isQFRRole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isQFRRole</label>
    <type>Checkbox</type>
</CustomField>