force-app/main/default/objects/Org_Switcher_Mapping__mdt/fields/isQISRRole__c.field-meta.xml
<CustomField>
    <fullName>isQISRRole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isQISRRole</label>
    <type>Checkbox</type>
</CustomField>