force-app/main/default/objects/Org_Switcher_Mapping__mdt/fields/isServiceRole__c.field-meta.xml
<CustomField>
    <fullName>isServiceRole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isServiceRole</label>
    <type>Checkbox</type>
</CustomField>