force-app/main/default/objects/Org_Switcher_Mapping__mdt/fields/Permission_Set_Group_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Group_Developer_Name__c</fullName>
    <label>Permission Set Group Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>