force-app/main/default/objects/Org_Switcher_Mapping__mdt/fields/PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>PermissionSet__c</fullName>
    <description>Developer Name of the Portal Permission sets</description>
    <label>Permission Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>